--- a/app/src/main/res/layout/activity_up_board.xml
+++ b/app/src/main/res/layout/activity_up_board.xml
@@ -27,12 +27,23 @@
 
 
                     <TextView
+                        android:id="@+id/tv_up_board_upboard"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:layout_centerHorizontal="true"
                         android:textStyle="bold"
                         android:text="업보드"
+                        android:textColor="#040404" />
+                    <TextView
+                        android:id="@+id/tv_up_board_modifyboard"
+                        android:visibility="gone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_centerHorizontal="true"
+                        android:textStyle="bold"
+                        android:text="보드 수정"
                         android:textColor="#040404" />
 
                     <TextView
@@ -45,6 +56,21 @@
                         android:gravity="center_horizontal"
                         android:lineSpacingExtra="5sp"
                         android:text="작성"
+                        android:textColor="#b0caea"
+                        android:textSize="15sp"
+                        />
+
+                    <TextView
+                        android:id="@+id/iv_upboard_modify_tv"
+                        android:visibility="gone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="23dp"
+                        android:gravity="center_horizontal"
+                        android:lineSpacingExtra="5sp"
+                        android:text="수정"
                         android:textColor="#b0caea"
                         android:textSize="15sp"
                         />
