--- a/app/src/main/res/layout/fragmet_my_page_introduce.xml
+++ b/app/src/main/res/layout/fragmet_my_page_introduce.xml
@@ -177,6 +177,7 @@
                         android:background="@drawable/box_on"
                         >
                         <TextView
+                            android:id="@+id/mypage_intro_status"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:lineSpacingExtra="2sp"
@@ -196,13 +197,14 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="190dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/mypage_intro_background"
             >
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:scaleType="centerCrop"
                 android:id="@+id/mypage_board_profile_img"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
@@ -248,17 +250,26 @@
                         />
 
                     <TextView
-                        android:id="@+id/mypage_board_role_tv"
+                        android:id="@+id/mypage_board_job"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="SWU/DESIGNER"
+                        android:text="SWU"
                         android:textSize="10sp"
                         android:layout_toRightOf="@+id/mypage_board_view"
                         android:layout_marginLeft="9.2dp"
                         android:layout_gravity="center"
                         android:textColor="#525252"
                         />
-
+                    <TextView
+                        android:id="@+id/mypage_board_company"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="/DESIGNER"
+                        android:textSize="10sp"
+                        android:layout_toRightOf="@+id/mypage_board_job"
+                        android:layout_gravity="center"
+                        android:textColor="#525252"
+                        />
 
                 </LinearLayout>
                 <TextView
@@ -274,24 +285,31 @@
                     />
             </LinearLayout>
 
+            <ScrollView
+                android:layout_below="@+id/mypage_board_all_name_layout"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
             <TextView
                 android:id="@+id/mypage_board_content_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="안녕하세요! 깅스의 런칭을 기다려온 이충엽입니다. 깅스의 승승장구를 기원합니다.
- 저와 컨택하고 싶은 분이 있다면
-게스트보드에 글을 남겨주시거나
-메세지를 보내주세요. 화이팅!"
+                android:text="안녕하세요! 깅스의 런칭을 기다려온 이충엽입니다. 깅스!"
                 android:layout_marginLeft="60dp"
                 android:layout_marginRight="38dp"
-                android:layout_below="@+id/mypage_board_all_name_layout"
+
                 android:layout_marginTop="10dp"
                 android:textSize="13sp"
                 android:textColor="#222222"
                 android:layout_marginBottom="16dp"
                 />
             <ImageView
+                android:src="@drawable/invalid_name"
+                android:scaleType="centerCrop"
                 android:id="@+id/mypage_board_content_iv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -300,15 +318,8 @@
                 android:layout_below="@+id/mypage_board_content_tv"
                 android:layout_marginTop="5dp"
                 />
-            <ImageView
-                android:id="@+id/mypage_board_content_iv2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="38dp"
-                android:layout_below="@+id/mypage_board_content_iv"
-                android:layout_marginTop="5dp"
-                />
+            </LinearLayout>
+            </ScrollView>
 
         </RelativeLayout>
 
