--- a/app/src/main/res/layout/rv_item_detailboard.xml
+++ b/app/src/main/res/layout/rv_item_detailboard.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_item_reboard_like"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignTop="@+id/iv_item_detailboard_profile_img"
+            android:layout_marginStart="-16dp"
+            android:layout_marginTop="1dp"
+            android:layout_toEndOf="@+id/tv_item_detailboard_contents"
+            android:src="@drawable/ic_like" />
+
+        <TextView
+            android:id="@+id/iv_item_reboard_like_cnt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/iv_item_reboard_like"
+            android:layout_toEndOf="@+id/iv_item_reboard_like"
+            android:text="10" />
         <ImageView
             android:layout_marginTop="12dp"
             android:id="@+id/iv_item_detailboard_profile_img"
