--- a/app/src/main/res/layout/activity_mypage_update.xml
+++ b/app/src/main/res/layout/activity_mypage_update.xml
@@ -112,6 +112,16 @@
                 android:layout_marginLeft="5dp"
                 android:background="@drawable/bt_camera"
                 />
+
+            <Button
+                android:id="@+id/mypage_test_btn"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="center"
+                android:text="테스트"
+                />
+
         </LinearLayout>
 
     </LinearLayout>
