--- a/app/src/main/res/layout/item_board_image.xml
+++ b/app/src/main/res/layout/item_board_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="100dp"
     android:layout_height="100dp"
@@ -10,7 +10,17 @@
         android:id="@+id/item_board_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/invalid_name"
         />
 
+    <Button
+        android:id="@+id/item_image_board_delete_btn"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/image_x_button"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        />
 
-</LinearLayout>
+</RelativeLayout>
