--- a/app/src/main/res/layout/fragmet_my_page_introduce.xml
+++ b/app/src/main/res/layout/fragmet_my_page_introduce.xml
@@ -127,7 +127,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:lineSpacingExtra="2sp"
-                            android:text="열글자 후후훟ㅅ파하ㅏㅎ"
+                            android:text="통신이 안되어있습니다."
                             android:textColor="#ffffff"
                             android:padding="3dp"
                             android:textSize="8sp"
@@ -185,7 +185,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:lineSpacingExtra="2sp"
-                            android:text="구직중"
+                            android:text="통신이 안되어있습니다."
                             android:textColor="#ffffff"
                             android:textSize="8sp"
                             android:layout_centerInParent="true"
@@ -254,7 +254,7 @@
                         />
 
                     <TextView
-                        android:id="@+id/mypage_board_job"
+                        android:id="@+id/mypage_board_company"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="SWU"
@@ -265,12 +265,12 @@
                         android:textColor="#525252"
                         />
                     <TextView
-                        android:id="@+id/mypage_board_company"
+                        android:id="@+id/mypage_board_job"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="/DESIGNER"
                         android:textSize="10sp"
-                        android:layout_toRightOf="@+id/mypage_board_job"
+                        android:layout_toRightOf="@+id/mypage_board_company"
                         android:layout_gravity="center"
                         android:textColor="#525252"
                         />
@@ -333,7 +333,6 @@
             android:layout_marginTop="23dp"
             android:background="#ffffff"
             >
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -353,8 +352,6 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="16dp"
                 android:background="@drawable/bt_guestmore" />
-
-
         </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
