--- a/app/src/main/res/layout/activity_up_board.xml
+++ b/app/src/main/res/layout/activity_up_board.xml
@@ -55,8 +55,8 @@
                         android:layout_marginEnd="23dp"
                         android:gravity="center_horizontal"
                         android:lineSpacingExtra="5sp"
-                        android:text="작성"
-                        android:textColor="#b0caea"
+                        android:textStyle="bold"
+                        android:textColor="#c45c55"
                         android:textSize="15sp"
                         />
 
@@ -117,7 +117,8 @@
                             android:letterSpacing="-0.01"
                             android:lineSpacingExtra="1sp"
                             android:text="Category"
-                            android:textColor="#b0caea"
+                            android:textStyle="bold"
+                            android:textColor="#c45c55"
                             android:textSize="13sp" />
                         <!--
 
@@ -245,9 +246,10 @@
 
                     //카테고리 메뉴선택
                     //
+
                     <LinearLayout
-                        android:visibility="gone"
                         android:id="@+id/ll_up_board_category_list"
+                        android:visibility="visible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#eceff0"
@@ -255,6 +257,7 @@
 
                         //질문아이콘
                         <RelativeLayout
+                            android:background="@drawable/bt_question"
                             android:id="@+id/rl_btn_up_board_category_question"
                             android:layout_weight="1"
                             android:layout_width="match_parent" android:layout_height="120dp">
@@ -267,8 +270,7 @@
                                 <ImageView
                                     android:id="@+id/iv_up_board_category_question"
                                     android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/ic_face_black_24dp" />
+                                    android:layout_height="50dp" />
 
                                 <TextView
                                     android:layout_marginTop="13dp"
@@ -279,6 +281,7 @@
                                     android:letterSpacing="-0.01"
                                     android:lineSpacingExtra="1sp"
                                     android:text="질문"
+                                    android:textStyle="bold"
                                     android:textColor="#999999"
                                     android:textSize="15sp" />
                             </RelativeLayout>
@@ -286,8 +289,13 @@
 
                         </RelativeLayout>
 
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_height="match_parent"
+                            android:background="#e2e8ed"/>
                         //영감아이콘
                         <RelativeLayout
+                            android:background="@drawable/bt_insight"
                             android:id="@+id/rl_btn_up_board_category_inspriation"
                             android:layout_weight="1"
                             android:layout_width="match_parent" android:layout_height="120dp">
@@ -300,8 +308,7 @@
                                 <ImageView
                                     android:id="@+id/iv_up_board_category_inspiration"
                                     android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/ic_face_black_24dp" />
+                                    android:layout_height="50dp" />
 
                                 <TextView
                                     android:layout_marginTop="13dp"
@@ -312,6 +319,7 @@
                                     android:letterSpacing="-0.01"
                                     android:lineSpacingExtra="1sp"
                                     android:text="영감"
+                                    android:textStyle="bold"
                                     android:textColor="#999999"
                                     android:textSize="15sp" />
                             </RelativeLayout>
@@ -319,8 +327,14 @@
 
                         </RelativeLayout>
 
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_height="match_parent"
+                            android:background="#e2e8ed"/>
+
                         //협업아이콘
                         <RelativeLayout
+                            android:background="@drawable/bt_cowork"
                             android:id="@+id/rl_btn_up_board_category_collaboration"
                             android:layout_weight="1"
                             android:layout_width="match_parent" android:layout_height="120dp">
@@ -333,8 +347,7 @@
                                 <ImageView
                                     android:id="@+id/iv_up_board_category_collaboration"
                                     android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/ic_face_black_24dp" />
+                                    android:layout_height="50dp"/>
 
                                 <TextView
                                     android:layout_marginTop="13dp"
@@ -345,6 +358,7 @@
                                     android:letterSpacing="-0.01"
                                     android:lineSpacingExtra="1sp"
                                     android:text="협업"
+                                    android:textStyle="bold"
                                     android:textColor="#999999"
                                     android:textSize="15sp" />
 
@@ -372,21 +386,22 @@
                             android:letterSpacing="-0.01"
                             android:lineSpacingExtra="1sp"
                             android:text="Title"
-                            android:textColor="#b0caea"
+                            android:textStyle="bold"
+                            android:textColor="#c45c55"
                             android:textSize="13sp" />
 
                         <EditText
                             android:id="@+id/et_up_board_title"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_centerVertical="true"
+                            android:layout_alignParentTop="true"
                             android:layout_marginStart="83.5dp"
                             android:background="@null"
                             android:hint="제목을 입력하세요"
                             android:letterSpacing="-0.01"
                             android:lineSpacingExtra="1sp"
-                            android:textColor="#999999"
 
+                            android:textColor="#999999"
                             android:textSize="15sp" />
                     </RelativeLayout>
 
@@ -410,7 +425,8 @@
                             android:letterSpacing="-0.01"
                             android:lineSpacingExtra="1sp"
                             android:text="Tags"
-                            android:textColor="#b0caea"
+                            android:textStyle="bold"
+                            android:textColor="#c45c55"
                             android:textSize="13sp" />
 
                         <EditText
