--- a/app/src/main/res/layout/fragment_home_board.xml
+++ b/app/src/main/res/layout/fragment_home_board.xml
@@ -37,8 +37,9 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#888888"
+        android:background="#e2e8ed"
         />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="8dp">
@@ -81,7 +82,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#999999"
+        android:background="#e2e8ed"
         />
 
 
