--- a/app/src/main/res/layout/rv_item_detailboard.xml
+++ b/app/src/main/res/layout/rv_item_detailboard.xml
@@ -19,6 +19,17 @@
             android:layout_alignBottom="@+id/iv_item_reboard_like"
             android:layout_toEndOf="@+id/iv_item_reboard_like"
             android:text="10" />
+
+        <ImageView
+            android:id="@+id/btn_rv_item_detailedboard_more"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="0dp"
+            android:src="@drawable/bt_more" />
+
         <ImageView
             android:layout_marginTop="12dp"
             android:id="@+id/iv_item_detailboard_profile_img"
